# llm-train

./: .gitignore  README.md  pyproject.toml
scripts/: call_newsoft_trl_api.py  qwen25-sft.sh  run_online_model_result.py  run_vlm_result.py  train_vlm.py
scripts/dataset_converter/: from_img_and_txt.py  from_label_studio.py
scripts/eval/: table_correct_rate.py  v4_compare_newsoft_with_ans.py  view_steel_image_order_result.html
src/llm_train/: merge_lora.py  test_web.py  test_web_vllm.py  train_vlm.py  utils.py
